<resources>
    <string name="app_name">ScoreBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_choose_team">Please choose a team</string>
    <string name="next_five_games">Next 5 games:</string>
    <string name="last_five_games">Last five games:</string>
    <string name="about">About:</string>
    <string name="menu_show_summaries">Show boxscores</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_change_league">Change League…</string>
    <string name="no_desc_found">No description found.</string>
    <string name="search_teams_hint">"Search league: %1$s"</string>
    <string name="league_query_hint">Search leagues by name</string>
    <string name="my_teams_menu_item">My Teams</string>
    <string name="find_teams_menu_item">Find Teams</string>
    <string name="dialog_unfollow_team">Do you want to unfollow this team?</string>
    <string name="unfollowed">Team unfollowed.</string>
    <string name="find_leagues_menu_item">Choose League</string>
    <string name="view_highlights">View Highlights</string>
    <string name="menu_unfollow_all">Unfollow All</string>
    <string name="highlights_available">Highlights\nAvailable</string>
    <string name="facebook_application_id" translatable="false">761970038504811</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb761970038504811</string>
    <string name="facebook_client_token">ccdea45ff53398f2a8df95b3233f6674</string>
    <string name="menu_test_2">Test 1</string>
    <string name="menu_test_1">Test 2</string>
    <string name="purchase_pro_version">You can only follow one team.  Would you like to purchase the pro version to follow more than one?  Otherwise your followed team will be replaced with this one.</string>
    <string name="thankyou">Thank you and enjoy!</string>
    <string name="no_thankyou">No problem!</string>
    <string name="you_have_no_teams_followed">You are not following any teams</string>
    <string name="choose_league">Choose a league</string>
    <string name="no_teams_found">No teams found</string>
    <string name="menu_item_purchase_pro">Purchase pro version</string>
    <string name="menu_item_privacy_policy">Privacy Policy</string>
    <string name="yes">Yup</string>
    <string name="no">Nah</string>
    <string name="no_team_selected">No team selected!</string>
    <string name="unfollow_title">Are you sure</string>
    <string name="menu_unfollow_team">Unfollow team…</string>
    <string name="boxscore_not_available">(BOXSCORE NOT AVAILABLE)</string>
    <string name="privacy_policy_url">https://www.freeprivacypolicy.com/live/226786c7–4348–4919-bbb7-e0313f06562b</string>
    <string name="undo">Undo</string>
    <string name="highlights_fail">Could not load highlights\n%1$s</string>
    <string name="api_error">An error occurred : %1$s</string>
</resources>