<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sports_icon_background"
    android:padding="10dp"
    tools:context=".ViewSelectedTeamsScoresFragment">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight=".75" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:src="@tools:sample/avatars" />

            </FrameLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75">

                <TextView
                    android:id="@+id/last5Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:capitalize="characters"
                    android:text="@string/last_five_games"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBarLast5"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@id/last5Label" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/last5Container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <!-- put views here -->

                <com.fimbleenterprises.sportsdb.NonScrollRecyclerView
                    android:id="@+id/recyclerviewLast5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    android:fitsSystemWindows="true"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
            </FrameLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75">

                <TextView
                    android:id="@+id/next5label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:capitalize="characters"
                    android:text="@string/next_five_games"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBarNext5"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@+id/next5label" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/next5Container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <!-- put views here -->

                <com.fimbleenterprises.sportsdb.NonScrollRecyclerView
                    android:id="@+id/recyclerviewNext5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
            </FrameLayout>

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
        </TableRow>

    </TableLayout>

</ScrollView>